Add ProfileUtils and clean up code